--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = [
     "Misty De Meo <mistydemeo@gmail.com>",
     "MrConan1",
 ]
-license = "LGPL-3.0-only"
+license = "LGPL-3.0"
 description = "Library to compress data using Sega's CMP format"
 homepage = "https://github.com/studio-lucia/sega_cmp"
 repository = "https://github.com/studio-lucia/sega_cmp"
