--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "sega_cmp"
 version = "0.2.0"
+edition = "2018"
 authors = [
     "Misty De Meo <mistydemeo@gmail.com>",
     "MrConan1",
